--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "axios": "^1.6.7",
-    "express": "^4.18.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
